--- a/index3.html
+++ b/index3.html
@@ -5,13 +5,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>sitesApi</title>
+  <title>sitesApi3</title>
 </head>
 
 <body>
   <p>Click the button to find the nearest Kids Sites.</p>
   <button onclick="getLocation()">Try It</button>
   <p id="demo"></p>
+  <div id="map-canvas" style="height: 300px; width: 300px;"></div>
   <p id="listings"></p>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
