--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           address = results[i].attributes.address;
           days = results[i].attributes.daysofOperation;
           contact = formatPhoneNumber(results[i].attributes.contactPhone);
-          LatLng = results[i].geometry.y + "," + results[i].geometry.x;
-          listing = name + "<br>" + sponsor + "<br>" + address + "<br>" + "Serving on: " + days + "<br>" + "Call " + contact + " for meal times<br>" + LatLng + "<br><br>";
+          LatLng = results[i].geometry.y + ',' + results[i].geometry.x;
+          listing = name + '<br>' + sponsor + '<br>' + address + '<br>' + 'Serving on: ' + days + '<br>' + 'Call ' + '<a href="tel:+1-' + contact + '">' + contact + '</a>' + ' for meal times<br>' + LatLng + '<br><br>';
 
           a.innerHTML = a.innerHTML + listing;
         }
@@ -56,7 +56,7 @@
 
     //code from https://gist.github.com/yitznewton/4f096a8c5fc1e6bd08c7 (Starbucks Stores API / Google Maps JS API mashup with browser geolocation)
 
-
+// + 'Call ' + '<a href="tel+1-' + contact + '">' + contact + '</a>' + ' for meal times<br>' +
 
 
     // code from https://stackoverflow.com/questions/8358084/regular-expression-to-reformat-a-us-phone-number-in-javascript
