address opens in google maps

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           days = results[i].attributes.daysofOperation;
           contact = formatPhoneNumber(results[i].attributes.contactPhone);
           LatLng = results[i].geometry.y + ',' + results[i].geometry.x;
-          listing = name + '<br>' + sponsor + '<br>' + address + '<br>' + 'Serving on: ' + days + '<br>' + 'Call ' + '<a href="tel:+1-' + contact + '">' + contact + '</a>' + ' for meal times<br>' + LatLng + '<br><br>';
+          listing = name + '<br>' + sponsor + '<br>' + '<a href="https://www.google.com/maps/search/?api=1&query=' + LatLng + '">' + address + '</a>' + '<br>' + 'Serving on: ' + days + '<br>' + 'Call ' + '<a href="tel:+1-' + contact + '">' + contact + '</a>' + ' for meal times<br>' + LatLng + '<br><br>';
 
           a.innerHTML = a.innerHTML + listing;
         }
