clickable links, notes updated

--- a/index3.html
+++ b/index3.html
@@ -81,8 +81,8 @@
     var drawMarker = function(map, store) {
       var marker = new google.maps.Marker({
         map: map,
-        position: storeToGoogleLatLng(store),
-        title: store.store.name
+        position: LatLng,
+        title: name
       });
     };
 
