--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,7 @@
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
   <body>
     <div id="map-canvas" style="height: 600px; width: 600px;"></div>
 
