--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Free Food Near You </title>
   <!-- link to Jquery , fire base and other needed  -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChuHK8NC9bcZBbDMOh8HYfd-ZIAfAgpGs"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCm9jtLUThY_3O1Uec3Ao-DWDkkBNzCl3U&callback=initMap"async defer></script>
   <!-- Bootstrap CSS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- This bootstrap style sheet   -->
