--- a/index.html
+++ b/index.html
@@ -32,23 +32,13 @@
 
     </div>
 
-         <div class="well well-lg"id ="listings-area">
-          <h2>Top 3 locations</h2>
-
-          This is the location "well" will be dynamicaly created by JS
+    <div class="well well-lg"id ="listings-area">
+         
       <ul class="list-group">
         <li class="list-group-item">
-
-          location
+        listing goes here
         </li>
-        <li class="list-group-item">
 
-         location
-        </li>
-        <li class="list-group-item">
-
-          location
-        </li>
       </ul>
     </div>
 
