adding about us page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
       </ul>
     </div>
 <footer>
-  <div class="panel-footer" align="center">FISH</div>
+  <!-- <div class="panel-footer" align="center">FISH</div> -->
+  <div class="breadcrumb">
+    <a href="about.html"> <button type="button" class="btn btn-secondary">About Us</button></a>
+    </div>
 </footer>
 </div>
 </body>
