--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </ul>
     </div>
 <footer>
-  <div class="panel-footer" align="center"><a href="about.html">FISH</a></div>
+  <div class="panel-footer" align="center"><a href="about.html">About FISH</a></div>
   <!-- <div class="breadcrumb">
     <a href="about.html"> <button type="button" class="btn btn-secondary">About Us</button></a>
     </div> -->
