adding 1 to both fields

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
   <div class="form-group">
     <label for="mealsites">Select the number of Meal Sites:</label>
     <select class="form-control" id="sitesform">
+      <option>1</option>
       <option>5</option>
       <option>10</option>
       <option>20</option>
@@ -50,6 +51,7 @@
   <div class="form-group">
     <label for="radiusform">Select the radius (in miles) you want to search over:</label>
     <select class="form-control" id="radiusform">
+      <option>1</option>
       <option>3</option>
       <option>5</option>
       <option>10</option>
